<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2015 The CyanogenMod Project
     Copyright (C) 2017,2019 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setup Wizard</string>
    <string name="os_name" translatable="false">LineageOS</string>

    <string name="calyx_wizard_script_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script</string>
    <string name="calyx_wizard_script_user_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script_user</string>
    <string name="calyx_fdroid_repo_location" translatable="false">/product/fdroid/repo</string>

    <string name="activity_label_empty" />

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="loading">Just a sec\u2026</string>

    <string name="setup_complete">Setup is complete</string>
    <string name="setup_welcome">Welcome</string>
    <string name="setup_locale">Language</string>
    <string name="setup_wifi">Select Wi-Fi</string>
    <string name="setup_sim_missing">SIM card missing</string>
    <string name="setup_choose_data_sim">Choose a SIM for data</string>
    <string name="setup_location">Location services</string>
    <string name="setup_other">Other services</string>
    <string name="setup_datetime">Date &amp; time</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>

    <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="choose_data_sim_summary" product="tablet">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your tablet.</string>
    <string name="choose_data_sim_summary" product="default">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your phone.</string>

    <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>

    <string name="backup_data_summary"><b>Back up</b> app data, Wi-Fi passwords, and other settings to Google servers</string>

    <string name="other_services_summary">These services put Google to work for you, and you can turn them on or off at any time. Data will be used in accordance with Google\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
    <string name="location_services_summary">Location services allows system and third party apps to gather and use data such as your approximate location. For example, an app may use your approximate location to locate nearby coffee shops.</string>
    <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>
    <string name="location_battery_saving"><b>Reduce battery consumption</b> by restricting the number of GPS updates per hour.</string>
    <string name="location_network"><b>Use Wi-Fi</b> to help apps determine your location.</string>
    <string name="location_network_telephony"><b>Use Wi-Fi and cellular networks</b> to help apps determine your location.</string>
    <string name="location_network_gms"><b>Use Google\'s location service</b> to help apps determine your location. This means sending anonymous location data to Google, even when no apps are running.</string>

    <string name="setup_mobile_data">Turn on cellular data</string>
    <string name="setup_mobile_data_no_service">No service</string>
    <string name="setup_mobile_data_emergency_only">Emergency calls only</string>
    <string name="enable_mobile_data_summary">Do you want to use cellular data during setup? Turning on cellular data may be subject to data charges.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>

    <string name="emergency_call">Emergency call</string>

    <string name="setup_services">LineageOS features</string>
    <string name="services_explanation" product="tablet">These services work for you to extend the capabilities of your tablet. Data will be used in accordance with LineageOS\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
    <string name="services_explanation" product="default">These services work for you to extend the capabilities of your phone. Data will be used in accordance with LineageOS\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
    <string name="services_privacy_policy">Privacy Policy</string>
    <string name="services_help_improve_cm">Help improve <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
    <string name="services_metrics_label"><xliff:g id="name" example="Help improve LineageOS">%1$s</xliff:g> by automatically sending diagnostic and usage data to LineageOS. This information can’t be used to identify you and lends a hand to teams working on things like battery life, app performance, and new <xliff:g id="name" example="LineageOS">%2$s</xliff:g> features.</string>
    <string name="services_os_nav_keys_label"><b>Use on screen navigation keys</b> instead of hardware keys.</string>

    <string name="setup_unlock">Unlock</string>
    <string name="setup_device_locked">This device has been locked by the user.</string>
    <string name="setup_require_cyanogen_label"><b>Require your account password</b> in order to use your device even after a factory reset.</string>
    <string name="setup_device_locked_instructions"><i>To turn this feature off/on, please go to Settings > Security</i></string>

    <!-- Fingerprint setup -->
    <string name="settings_fingerprint_setup_title">Select backup screen lock type</string>
    <string name="settings_fingerprint_setup_details">How would you like to lock your screen?</string>
    <string name="fingerprint_setup_title">Fingerprint setup</string>
    <string name="fingerprint_setup_summary">To use your fingerprint sensor to unlock your screen, you\'ll need to:</string>
    <string name="fingerprint_setup_backup_lock_method">Setup a secondary unlock method</string>
    <string name="fingerprint_setup_add_fingerprint">Add your fingerprint</string>
    <string name="fingerprint_setup_screen_lock_setup">Setup screen lock</string>
    <string name="sim_locale_changed">%1$s SIM detected</string>

    <!-- secure lock screen -->
    <string name="settings_lockscreen_setup_title">Select screen lock type</string>
    <string name="settings_lockscreen_setup_details">How would you like to lock your screen?</string>
    <string name="lockscreen_setup_title" product="tablet">Protect your tablet</string>
    <string name="lockscreen_setup_title" product="default">Protect your phone</string>
    <string name="lockscreen_setup_summary"><b>Protect this device</b> and require a PIN, pattern, or password to unlock the screen</string>
    <string name="lockscreen_setup_screen_lock_setup">Set up</string>

    <!-- MicroG setup -->
    <string name="microg_title">Google Services</string>
    <string name="microg_description">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
    <string name="microg_switch_label">Enable Google Services Compatibility</string>
    <string name="microg_warning">Note: If you enable this now, your phone will be set up to send data to Google.  You can change this later in the microG settings.</string>

    <!-- app install -->
    <string name="install_apps_title">Additional Apps</string>
    <string name="install_apps_subtitle"><b>Review additional apps.</b> You can install them later as well.</string>
    <string name="install_apps_select_all">All of the following apps</string>
    <string name="waiting_for_apps">Please wait while we install apps.</string>

    <!-- backup restore -->
    <string name="intro_restore_title">Restore apps and data</string>
    <string name="intro_restore_subtitle">If you have a backup from your last GrapheneOS phone, you can restore it here.</string>
    <string name="intro_restore_button">Restore from backup</string>

</resources>
